--- a/05-heroes-app/package.json
+++ b/05-heroes-app/package.json
@@ -25,6 +25,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "axios": "^1.12.2",
+    "axios-mock-adapter": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsdom": "^27.0.1",
